--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,4 +1,4 @@
-name: Update Daily Morning Digest
+name: Update Daily Newsletter
 on:
   schedule:
     - cron: "0 7 * * *"  # Runs every day at 7 AM UTC
@@ -17,9 +17,11 @@ jobs:
           python-version: "3.x"
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip install openai
 
       - name: Run script
+        env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: python generate_newsletter.py
 
       - name: Commit and push updates
