--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,7 +1,7 @@
-name: Update Daily Newsletter
+name: Update Daily Morning Digest
 on:
   schedule:
-    - cron: "0 7 * * *"  # Runs every day at 7 AM UTC
+    - cron: "0 13 * * *"  # 8 AM EST (13:00 UTC)
   workflow_dispatch: # Allows manual triggering
 
 jobs:
@@ -17,17 +17,18 @@ jobs:
           python-version: "3.x"
 
       - name: Install dependencies
-        run: pip install openai
+        run: pip install -r requirements.txt
 
       - name: Run script
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-        run: python generate_newsletter.py
+          TZ: 'America/New_York'  # Set timezone to EST
+        run: python run_newsletter.py
 
       - name: Commit and push updates
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "actions@github.com"
           git add index.html
-          git commit -m "Auto-update newsletter"
+          git commit -m "Update Daily Morning Digest for $(TZ='America/New_York' date +'%Y-%m-%d')"
           git push
