--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -4,6 +4,9 @@ on:
     - cron: "0 13 * * *"  # 8 AM EST (13:00 UTC)
   workflow_dispatch: # Allows manual triggering
 
+permissions:
+  contents: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -27,8 +30,10 @@ jobs:
 
       - name: Commit and push updates
         run: |
-          git config --global user.name "github-actions"
-          git config --global user.email "actions@github.com"
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add index.html
           git commit -m "Update Daily Morning Digest for $(TZ='America/New_York' date +'%Y-%m-%d')"
           git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
